# cfutils

./: .gitignore  :w  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  pyproject.toml  setup.py  test.sh  tox.ini  upload.sh
.github/: FUNDING.yml  ISSUE_TEMPLATE.md
.github/workflows/: docs.yaml  pypi.yml  testpypi.yml
cfutils/: __init__.py  align.py  align_by_blastn.py  cli.py  count.py  legacy.py  parser.py  run.py  show.py  test.py  utils.py
data/: A2-3k_SEQ_R_B01.ab1  A4-3k_SEQ_R_D01.ab1  B5-M13R_B07.ab1  B5-M13R_B07_vs_ref.tsv  C5-3k_SEQ_R_A04.ab1  FZ01_A12_096.ab1  data_file  ref.fa  ref2.fa
docs/: CNAME  _config.yml  api.md  cli.md  features.md  index.md  installation.md  notes.md
test/: test_advance.py  test_align.py  test_basic.py  test_parser.py  test_run.py  test_show.py
