[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "cfutils"
version = "0.0.0.dev58"
description = "Chromatogram File Utils"
authors = ["Ye Chang <yech1990@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/yech1990/cfutils"
documentation = "https://cf.readthedocs.io/"
keywords = ["DNA", "mutation", "chromatogram", "biology"]

[tool.poetry.dependencies]
python = "^3.8"
Click = "^8.0.0"
biopython = "^1.78"
matplotlib = "^3.0.0"
ssw = "^0.4.1"

[tool.poetry.dev-dependencies]
twine = "^3.1.1"

[tool.poetry.scripts]
cfutils = "cfutils.cli:cli"

[tool.black]
line-length = 79
