[project]
name = "cfutils"
version = "0.0.0.dev62"
description = "Chromatogram File Utils"
authors = [{ name = "Ye Chang", email = "yech1990@gmail.com" }]
requires-python = "~=3.9"
readme = "README.md"
license = "MIT"
keywords = ["DNA", "mutation", "chromatogram", "biology"]
dependencies = [
    "click>=8.0.0,<9",
 "ssw>=0.4.1,<0.5",
 "matplotlib>=3.9.2,<4",
 "numpy>=2.0.2",
]

[project.urls]
Repository = "https://github.com/yech1990/cfutils"
Documentation = "https://cf.readthedocs.io/"

[project.scripts]
cfutils = "cfutils.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cfutils"]

[tool.black]
line-length = 79

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
